--- a/index.html
+++ b/index.html
@@ -26,22 +26,24 @@
                         <li class="about-me-list"><h3>Education</h3>
                             <br>
                             <p class="education">
-                                I graduated from the United States Air Force Academy in 2019 with a BS in Management. I then received my Certified Strength and Conditioning Specialist (CSCS) certification from the National Strength and Conditioning Association. Currently, I am working toward various Codecademy certifications, including:</p>
+                                I graduated from the United States Air Force Academy in 2019 with a BS in Management. I then received my Certified Strength and Conditioning Specialist (CSCS) certification from the 
+                                National Strength and Conditioning Association. Currently, I am working toward various Codecademy certifications, including:</p>
                                 <ul class="certs">
                                     <li class="cert">Full Stack Engineering</li>
                                     <li class="cert">Machine Learning</li>
                                     <li class="cert">Python Mastery</li>
                                 </ul>
-                                <p>The Full Stack Engineering course includes HTML, CSS, Git/Github competency, Javascript, React, SQL, and more! I have previously completed multiple Python courses as an introduction to programming.</p>
+                                <p>The Full Stack Engineering course includes HTML, CSS, Git/Github competency, Javascript, React, SQL, and more! I have previously completed multiple Python courses as an introduction 
+                                    to programming.</p>
                         </li>
                         <li class="about-me-list"><h3>Career</h3>
                             <br>
                             <p class="career">
-                                After graudation, I was given a job at the Space and Missile Systems Center (now renamed Space Systems Center or SSC) located in El Segundo, 
-                                California. At SSC I was the project officer for a next-generation SATCOM program for all three years. For the first 1.5 years, I was part of a team 
-                                responsible for working the satellite portion of the ecosystem. I was then transitioned to a terminal modem program for the same SATCOM ecosystem. From the 
+                                After graduation, I was given a job at the Space and Missile Systems Center (now renamed Space Systems Center or SSC) located in El Segundo, 
+                                California. At SSC I was the project officer for a next-generation SATCOM program for the three years I was there. For the first 1.5 years, I was part of a team 
+                                responsible for developing the satellite portion of the ecosystem. I was then transitioned to a terminal modem program for the same SATCOM ecosystem. From the 
                                 modem program I was shifted to a role at the renowned Kessel Run program office, where I am still currently working. In January 2024 I am planning to 
-                                transition into the civilian work force, with the goal of becoming a software engineer after realizing program/product management wasn't my strong suit!
+                                transition into the civilian work force, with the goal of becoming a software engineer!
                             </p>
                         </li>
                         <li class="about-me-list"><h3>Hobbies</h3>
@@ -53,16 +55,16 @@
                                             am more interested in back end programming than front end right now!</p>
                                     </li>
                                     <li class="fitness"><h4>Health/Fitness</h4>
-                                        <p>Lifting weight and incorporating proper nutrition is on of my passions. Learning about what can help improve our health/performance has always been an interest of mine, probably because I grew with an older brother
-                                            and was always look for an advatage!</p>
+                                        <p>Lifting weights and incorporating proper nutrition is on of my passions. Learning about what can help improve our health/performance has always been an interest of mine,
+                                            probably because I grew with an older brother and was always look for an advatage!</p>
                                     </li>
                                     <li class="gaming"><h4>Video Games</h4>
                                             <p>I enjoy anything from racing games to FPS to RPGs, I just enjoy a well put together game mechanics meshed with a solid story. I've
                                                 been on the search from a new online CO-OP campaign game, similar to the Borderlands franchise.</p>
                                     </li>
                                     <li class="cars"><h4>Cars</h4>
-                                    <p>My last hobby is cars. I enjoy any good, enthusiast car but have a personal bias toward BMW M cars or any car that has a manual transmission. A
-                                        manual transmission makes a simple drive to the grocery store feel like so much more. You feel more connected to the car, and downshifting through 
+                                    <p>My last hobby is cars. I enjoy almost any enthusiast car but have a bias toward BMW M cars. Manual transmission car are also special because they make
+                                        a simple drive to the grocery store so much more. You feel more connected to the car, and downshifting through 
                                         the gears can make it feel like you're coming up to the Corkscrew at Laguna Seca!</p>
                                     </li>
                                 </ul>
